WIP - fixing split maximize buton z-index and visibility issues

--- a/src/client/js/Panels/SplitPanel/styles/SplitPanel.scss
+++ b/src/client/js/Panels/SplitPanel/styles/SplitPanel.scss
@@ -32,7 +32,7 @@ ul.split-panel-dropdown-list {
       top: 0px;
       width: 40px;
       height: 40px;
-      z-index: 1;
+      z-index: 999999;
 
     }
     .maximize-btn {
@@ -43,9 +43,9 @@ ul.split-panel-dropdown-list {
       color: #00235b;
       opacity: 0.75;
       cursor: pointer;
-
       &:hover {
-        opacity: 1
+        opacity: 1;
+        text-shadow: -2px 2px #9ecaed, 2px -2px #9ecaed, -1px 1px #9ecaed, 1px -1px #9ecaed;
       }
     }
   }
